<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/topLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/titlebar_bg" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/find_password"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:src="@drawable/back_icon" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/topLayout"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:text="@string/phoneNum"
        android:textColor="#00B2EE"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/phoneNumEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_marginRight="22dp"
        android:layout_toRightOf="@+id/textView2"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="30dp"
        android:text="@string/verifi_code"
        android:textColor="#00B2EE"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/verifyEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/phoneNumEt"
        android:layout_marginRight="22dp"
        android:textSize="25sp" />

    <Button
        android:id="@+id/confirmBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/login_bg"
        android:text="@string/confirm"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView4"
        android:layout_below="@+id/verifyEt"
        android:layout_marginTop="30dp"
        android:text="@string/new_password"
        android:textColor="#00B2EE"
        android:textSize="25sp" />

    <Button
        android:id="@+id/verifyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/verifyEt"
        android:layout_alignBottom="@+id/verifyEt"
        android:layout_alignRight="@+id/verifyEt"
        android:background="@drawable/verifi_btn"
        android:text="@string/click_send"
        android:textColor="#EEEE00" />

    <EditText
        android:id="@+id/newPasswordEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_marginRight="22dp"
        android:layout_alignLeft="@+id/verifyEt"
        android:ems="10"
        android:textSize="25sp" >

        <requestFocus />
    </EditText>

</RelativeLayout>