<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >
<!-- 登录页面 -->
    <RelativeLayout
        android:id="@+id/topLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/titlebar_bg" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:src="@drawable/back_icon" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/topLayout"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:text="@string/user_account"
        android:textColor="#00B2EE"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/username_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_marginRight="22dp"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/textView2"
        android:textSize="20sp"
        android:background="@null" />
    <TextView 
        android:layout_below="@id/textView2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginRight="22dp"
        android:layout_marginLeft="60dp"
        android:background="#CBC4C4"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="30dp"
        android:text="@string/password"
        android:textColor="#00B2EE"
        android:textSize="20sp" />
    <TextView 
        android:layout_below="@id/textView4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginRight="22dp"
        android:layout_marginLeft="60dp"
        android:background="#CBC4C4"/>

    <EditText
        android:id="@+id/password_editText"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/username_editText"
        android:layout_marginRight="22dp"
        android:layout_marginLeft="5dp"
        android:textSize="20sp"
        android:background="@null" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_editText"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/login_bg"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/forgetPasswordTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/quickRegisterTv"
        android:layout_alignBottom="@+id/quickRegisterTv"
        android:layout_alignRight="@+id/loginBtn"
        android:text="@string/forget_password" />

    <TextView
        android:id="@+id/quickRegisterTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/loginBtn"
        android:layout_below="@+id/loginBtn"
        android:layout_marginTop="20dp"
        android:text="@string/quick_register" />

    <RelativeLayout
        android:id="@+id/loginSuccessTips"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgetPasswordTv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_success" />

        <TextView
            
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imageView1"
            android:layout_marginLeft="20dp"
            android:text="@string/login_success"
            android:textColor="#33ccff" 
            android:textSize="20sp"/>

    </RelativeLayout>

</RelativeLayout>